:construction_worker: Fix Test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,4 +7,5 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - uses: seanmiddleditch/gha-setup-ninja@v3
       - run: ./test.bash
